Fixed bug with planets overlapping

--- a/game/css/map/map_space.css
+++ b/game/css/map/map_space.css
@@ -187,7 +187,7 @@
 
 #marker-9 {
     left: calc(100px + 500px);
-    top: calc(100px + 300px);
+    top: calc(100px + 500px);
     background-image: url("../../img/planets/eridanus.png");
     background-repeat: no-repeat;
     image-rendering: crisp-edges;
@@ -202,7 +202,7 @@
 }
 
 #marker-10 {
-    left: calc(100px + 500px);
+    left: calc(100px + 700px);
     top: calc(100px + 300px);
     background-image: url("../../img/planets/aurius.png");
     background-repeat: no-repeat;
